<resources>
    <integer name="com_vk_sdk_AppId">7208343</integer>
    <string name="app_name">AndroidTestApp</string>
    <string name="perm_deny_msg">Для дальнейшей работы нужно Ваше разрешение</string>
    <string name="prog_dlg_msg">Пожалуйста, подождите..</string>
    <string name="no_connect_msg">Проверьте подключение к сети</string>
    <string name="search_view_hint">Search</string>
    <string name="error_toast_msg">Что-то пошло не так..</string>
    <string name="user_female">Женский</string>
    <string name="user_anymale">Любой</string>
    <string name="user_male">Мужской</string>
    <string name="empty_data_msg">К сожалению, ничего не найдено</string>
    <string name="user_name">Имя</string>
    <string name="pers_data_name">Имя</string>
    <string name="user_lastname">Фамилия</string>
    <string name="pers_data_lastname">Фамилия</string>
    <string name="user_relation">Сем. положение</string>
    <string name="pers_data_relation">Сем. положение</string>
    <string name="user_sex">Пол</string>
    <string name="pers_data_sex">Пол</string>
    <string name="user_screen_name">Screen Name</string>
    <string name="btn_auth_vk">Авторизация</string>
    <string name="tb_friend_title">Мои друзья</string>
    <string name="menu_item_my_friends_title">My Friends</string>
    <string name="menu_item_pers_info_title">Personal Data</string>
    <string name="menu_item_search_title">Search</string>
    <string name="pers_data_user_last_seen">"Посл.визит: "</string>
    <string name="pers_data_bdate">Дата рождения</string>
    <string name="pers_data_about">О себе</string>
    <string name="pers_data_interests">Интересы</string>
    <string name="pers_data_country_city">Страна/Город</string>
    <string name="not_married_anymale">не женат/не замужем</string>
    <string name="not_married_female">не замужем</string>
    <string name="not_married_male">не женат</string>
    <string name="have_friend_anymale">есть друг/есть подруга</string>
    <string name="have_friend_female">есть друг</string>
    <string name="have_friend_male">есть подруга</string>
    <string name="engaged_anymale">помолвлен/помолвлена</string>
    <string name="engaged_female">помолвлена</string>
    <string name="engaged_male">помолвлен</string>
    <string name="married_anymale">женат/замужем</string>
    <string name="married_female">замужем</string>
    <string name="married_male">женат</string>
    <string name="all_difficult">всё сложно</string>
    <string name="active_searching">в активном поиске</string>
    <string name="inlove_anymale">влюблён/влюблена</string>
    <string name="inlove_female">влюблена</string>
    <string name="inlove_male">влюблён</string>
    <string name="civil_marriage">в гражданском браке</string>
    <string name="relation_not_specified">не указано</string>
    <string name="menu_item_refresh_title">Обновить</string>
    <string name="error_private_profile_toast_msg">Пользователь ограничил доступ к своим друзьям</string>
    <string name="menu_item_get_friends_title">Друзья пользователя</string>
    <string name="error_incorrect_id_toast_msg">Неверный идентификатор пользователя</string>
</resources>
