<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_user_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_user_photo_200"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/activity_detail_iv_start_margin"
        android:layout_marginTop="@dimen/activity_detail_iv_top_margin"
        android:layout_marginEnd="@dimen/activity_detail_iv_end_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_user_detail" />

    <TextView
        android:id="@+id/tv_lbl_firstname"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
        android:layout_marginTop="@dimen/activity_detail_tv_top_margin"
        android:background="@drawable/border_left_bottom_top"
        android:text="@string/user_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_photo_200" />

    <TextView
        android:id="@+id/tv_user_firstname"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_detail_tv_top_margin"
        android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
        android:background="@drawable/border_rigth_bottom_top"
        android:textAlignment="textEnd"
        android:textSize="@dimen/activity_detail_tv_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_photo_200" />

    <TextView
        android:id="@+id/tv_lbl_lastname"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
        android:background="@drawable/border_left_bottom"
        android:text="@string/user_lastname"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_firstname" />

    <TextView
        android:id="@+id/tv_user_lastname"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
        android:background="@drawable/border_right_bottom"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_firstname" />

    <TextView
        android:id="@+id/tv_lbl_user_relation"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
        android:background="@drawable/border_left_bottom"
        android:text="@string/user_relation"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_sex" />

    <TextView
        android:id="@+id/tv_user_relation"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
        android:background="@drawable/border_right_bottom"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_sex" />

    <TextView
        android:id="@+id/tv_lbl_sex"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
        android:background="@drawable/border_left_bottom"
        android:text="@string/user_sex"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_scrname" />

    <TextView
        android:id="@+id/tv_user_sex"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
        android:background="@drawable/border_right_bottom"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_scrname" />

    <TextView
        android:id="@+id/tv_lbl_scrname"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
        android:background="@drawable/border_left_bottom"
        android:text="@string/user_screen_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_lastname" />

    <TextView
        android:id="@+id/tv_user_scrname"
        style="@style/UserDetailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
        android:background="@drawable/border_right_bottom"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_lastname" />

    <ProgressBar
        android:id="@+id/pb_load_photo"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/iv_user_photo_200"
        app:layout_constraintEnd_toEndOf="@+id/iv_user_photo_200"
        app:layout_constraintStart_toStartOf="@+id/iv_user_photo_200"
        app:layout_constraintTop_toTopOf="@+id/iv_user_photo_200" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>