<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_pers_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.UserDetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_pers_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_pers_photo_200"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/activity_detail_iv_start_margin"
            android:layout_marginTop="@dimen/activity_detail_iv_top_margin"
            android:layout_marginEnd="@dimen/activity_detail_iv_end_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_pers_data" />

        <TextView
            android:id="@+id/tv_lbl_pers_country_city"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
            android:background="@drawable/border_left_bottom"
            android:text="@string/pers_data_country_city"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_pers_interests" />

        <TextView
            android:id="@+id/tv_pers_country_city"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
            android:background="@drawable/border_right_bottom"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_pers_interests" />

        <TextView
            android:id="@+id/tv_pers_last_seen"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
            android:layout_marginTop="@dimen/activity_pers_info_lastseen_tv_top_margin"
            android:layout_marginEnd="@dimen/activity_pers_info_lastseen_tv_end_margin"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="@dimen/activity_detail_tv_padding"
            android:singleLine="true"
            android:textSize="@dimen/activity_pers_info_lastseen_tv_textsize"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_pers_photo_200" />

        <TextView
            android:id="@+id/tv_lbl_pers_interests"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
            android:background="@drawable/border_left_bottom"
            android:text="@string/pers_data_interests"
            app:layout_constraintBottom_toTopOf="@+id/tv_pers_country_city"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_pers_about" />

        <TextView
            android:id="@+id/tv_pers_interests"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
            android:background="@drawable/border_right_bottom"
            android:singleLine="false"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_pers_about" />

        <TextView
            android:id="@+id/tv_lbl_pers_about"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
            android:background="@drawable/border_left_bottom"
            android:text="@string/pers_data_about"
            app:layout_constraintBottom_toTopOf="@+id/tv_pers_interests"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_pers_sex" />

        <TextView
            android:id="@+id/tv_pers_about"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
            android:background="@drawable/border_right_bottom"
            android:singleLine="false"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_pers_sex" />

        <TextView
            android:id="@+id/tv_lbl_pers_firstname"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
            android:layout_marginTop="@dimen/activity_pers_info_name_tv_top_margin"
            android:background="@drawable/border_left_bottom_top"
            android:text="@string/pers_data_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pers_last_seen" />

        <TextView
            android:id="@+id/tv_pers_firstname"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_pers_info_name_tv_top_margin"
            android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
            android:background="@drawable/border_rigth_bottom_top"
            android:textAlignment="textEnd"
            android:textSize="@dimen/activity_detail_tv_textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_pers_last_seen" />

        <TextView
            android:id="@+id/tv_lbl_pers_lastname"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
            android:background="@drawable/border_left_bottom"
            android:text="@string/pers_data_lastname"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_pers_firstname" />

        <TextView
            android:id="@+id/tv_pers_lastname"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
            android:background="@drawable/border_right_bottom"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_pers_firstname" />

        <TextView
            android:id="@+id/tv_lbl_pers_relation"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
            android:background="@drawable/border_left_bottom"
            android:text="@string/pers_data_relation"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_pers_country_city" />

        <TextView
            android:id="@+id/tv_pers_relation"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
            android:background="@drawable/border_right_bottom"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_pers_country_city" />

        <TextView
            android:id="@+id/tv_lbl_pers_sex"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
            android:background="@drawable/border_left_bottom"
            android:text="@string/pers_data_sex"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_pers_bdate" />

        <TextView
            android:id="@+id/tv_pers_sex"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
            android:background="@drawable/border_right_bottom"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_pers_bdate" />

        <TextView
            android:id="@+id/tv_lbl_pers_bdate"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_detail_tv_start_margin"
            android:background="@drawable/border_left_bottom"
            android:text="@string/pers_data_bdate"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_pers_lastname" />

        <TextView
            android:id="@+id/tv_pers_bdate"
            style="@style/UserDetailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_detail_tv_end_margin"
            android:background="@drawable/border_right_bottom"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_pers_lastname" />

        <ProgressBar
            android:id="@+id/pb_load_pers_photo"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_pers_photo_200"
            app:layout_constraintEnd_toEndOf="@+id/iv_pers_photo_200"
            app:layout_constraintStart_toStartOf="@+id/iv_pers_photo_200"
            app:layout_constraintTop_toTopOf="@+id/iv_pers_photo_200" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>